# tdd-fastapi-docker-template

./: .gitignore  docker-compose.yml  pyproject.toml
api/: config.py  main.py
project/: Dockerfile  requirements.txt
project/api/: main.py
project/app/: config.py  main.py
project/db/: Dockerfile
project/tests/: conftest.py
tests/: sample_test.py
