[tool.poetry]
name = "tdd-fastapi-docker"
version = "0.0.1"
description = ""
authors = ["Ryan Butler <butryan@amazon.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.63.0"
uvicorn = "^0.13.4"
tortoise = "^0.1.1"
asyncpg = "^0.22.0"
requests = "^2.25.1"
tortoise-orm = "^0.17.2"

[tool.poetry.dev-dependencies]
pre-commit = "^2.12.1"
pytest = "^6.2.4"
requests = "^2.25.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 119
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
